# SPDX-FileCopyrightText: 2025 Contributors to the Power Grid Model project <powergridmodel@lfenergy.org>
#
# SPDX-License-Identifier: MPL-2.0

[project]
name = "power-grid-model-workshop"
version = "0.1.0"
description = "A collection of Jupyter notebooks for Power Grid Model workshops"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=2.0,<3.0",
    "power-grid-model>=1.12.0",
    "networkx>=3.6.1",
    "pandas>=2.2,<3.0",
]

[project.optional-dependencies]
visualization = [
    "power-grid-model-ds[visualizer]>=1.8.2",
]
rdf = [
    "rdflib>=7.1",
    "SPARQLWrapper>=2.0.0",
    "pyoxigraph>=0.4.11",
    "pyarrow>=19.0.0",
    "pydantic>=2.10.5",
]
doc = [
    "power-grid-model[doc]>=1.12.0",
]

[tool.setuptools]
packages = []

#[[tool.uv.index]]
#name = "alliander"
#url = "https://alliander.jfrog.io/artifactory/api/pypi/pypi-all/simple"
# "uno-data-model>=0.1.1",
# "uno-pgm-converter>=0.5.7",